alignment issues

--- a/Meet_the_owner/Meet_the_owner.css
+++ b/Meet_the_owner/Meet_the_owner.css
@@ -58,22 +58,28 @@ body {
 	margin-left: 17%;
 }
 
+#content p {
+	text-align:left;
+	margin: 7%;
+}
+
+#content div {
+	width: 33.3%;
+	margin:auto;
+}
+
 #content_title {
 	text-align: center;
 	margin-top: 0.5em;
 }
 
 #photo_of_ann {
-	width: 20em;
+	width: 100%;
 	height: 15em;
-	margin-left: 32.5%;
+	margin:auto;
 	border: 0.15em solid black;
 }
 
-#content_text {
-	text-align:left;
-	margin: 7%;
-}
 
 #footer {
 	border: solid 0.15em black;
